package se.hellsoft.composetemplate.ui.theme

enum class ThemeMode {
    System,
    Light,
    Dark,
}
